Restore to 4am working configuration - fix white screen issue

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="apple-touch-icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://formspree.io; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https:; connect-src 'self' https://formspree.io;" />
     <meta name="description" content="CoreSense - Your AI life coach for health & habits. Get personalized insights from your sleep, steps, and activity data. Join the waitlist for early access." />
     <meta name="keywords" content="health app, AI coach, productivity, wellness, Apple Health, wearables, habit tracking" />
     <meta property="og:title" content="CoreSense - AI Life Coach for Health & Habits" />
